posiGen_FullsendBox/src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>EE Cases</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Check Meter Provisioning</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Reopened</fullName>
        </values>
        <values>
            <fullName>Request Manager Review</fullName>
        </values>
        <values>
            <fullName>Request for Contractor</fullName>
        </values>
        <values>
            <fullName>Request to Close</fullName>
        </values>
        <values>
            <fullName>Waiting on Customer</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>PM Cases</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Check Meter Provisioning</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Reopened</fullName>
        </values>
        <values>
            <fullName>Request Manager Review</fullName>
        </values>
        <values>
            <fullName>Request for Contractor</fullName>
        </values>
        <values>
            <fullName>Request to Close</fullName>
        </values>
        <values>
            <fullName>Waiting on Customer</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>SF2</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Reopened</fullName>
        </values>
        <values>
            <fullName>Request for Contractor</fullName>
        </values>
        <values>
            <fullName>Request to Close</fullName>
        </values>
        <values>
            <fullName>Waiting on Customer</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Numeric_ID__c</fullName>
        <formula>VALUE(Account.Numeric_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Numeric ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Account.Owner.FirstName  +  Account.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Account.BillingStreet &amp; BR() &amp; Account.BillingCity &amp; BR() &amp; Account.BillingState &amp; BR() &amp; Account.BillingPostalCode &amp; BR() &amp; Account.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_Required__c</fullName>
        <formula>PG_Product__r.Appointment_Required__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Appointment Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_Group__c</fullName>
        <inlineHelpText>Is this going to handled by a Field Tech?  Contractor?</inlineHelpText>
        <label>Assigned Group</label>
        <picklist>
            <picklistValues>
                <fullName>Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Posigen Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Care</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Subcontractor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Subcontractor this is assigned to.  This will send them an email notification.</inlineHelpText>
        <label>Assigned To Subcontractor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Subcontractor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases Assigned</relationshipLabel>
        <relationshipName>Cases_Assigned</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billfolder_on_Dropbox__c</fullName>
        <formula>Account.Customer_Bill_Folder__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billfolder on Dropbox</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRS_Notes__c</fullName>
        <label>CRS Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CaseAgeDays__c</fullName>
        <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Age (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Closed_When_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If complaint is resolved on the initial call</description>
        <label>Case Closed When Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Description__c</fullName>
        <label>Case Description</label>
        <picklist>
            <controllingField>Case_Subject__c</controllingField>
            <picklistValues>
                <fullName>Activation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analysis (Int. &amp; Ext.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Maintenance Scheduling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appearance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Upgrade Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Death</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debris/clean-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment Damage (Int. &amp; Ext.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fault/Error (Int. &amp; Ext.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foreclosure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grounding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Bills/No Savings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>House Fire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interior damage from install</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interior damage from Leak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Involuntary Removal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lockout (Int.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Locked (Int.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net Meter not Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No A/C or Heat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Call No Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Hot Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Solar Meter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Producing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Mobile__c</fullName>
        <label>Case Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Case_Notification_Placeholder_Field__c</fullName>
        <formula>Assigned_To_Subcontractor__r.Send_Case_Notifications_To__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Notification Placeholder EmailField</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Role__c</fullName>
        <formula>IF( CreatedBy.UserRole.Name = &quot;Concierge&quot;,&quot;Concierge&quot;,&quot;Other&quot;)</formula>
        <label>Case Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Subject__c</fullName>
        <label>Case Subject</label>
        <picklist>
            <picklistValues>
                <fullName>Administrative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net Meter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Account.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_Agent__c</fullName>
        <label>Claim Agent</label>
        <picklist>
            <picklistValues>
                <fullName>Adrian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kerrie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shannon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>David</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alicia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carisa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kimberly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contractor_s_Notes__c</fullName>
        <label>Contractor&apos;s Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Complaint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Complaint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Appointment_Scheduled__c</fullName>
        <description>Date of visit to customer home.</description>
        <label>Date Appointment Scheduled</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Customer_Was_Contacted__c</fullName>
        <label>Date Customer Was Contacted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_EU_Completed__c</fullName>
        <description>Date the EU was completed</description>
        <label>Date EU Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sent_to_Service_Contractor__c</fullName>
        <label>Date Sent to Service Contractor</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_EU__c</fullName>
        <label>Date of EU</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_Repair__c</fullName>
        <label>Date of Repair</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_Service__c</fullName>
        <label>Date of Service</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_since_contact__c</fullName>
        <description>Time since last modified record. This allows us to see if cases are still being worked on.</description>
        <formula>TODAY()  -  DATEVALUE( LastModifiedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days since contact</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <picklist>
            <controllingField>Subject__c</controllingField>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Damage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appearance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alarm/Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech to Investigate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smell,Smoke,Sparks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed Inspection</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Does_Customer_have_a_dog__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Does Customer have a dog?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Executive_Review_DH__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a stopgap measure introduced to give us (the ops department) case-tagging capability.</description>
        <inlineHelpText>Case marked for executive attention.</inlineHelpText>
        <label>Executive Review - DH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Follow_up_Customer_Service_Survey__c</fullName>
        <label>Customer Service Survey</label>
        <picklist>
            <picklistValues>
                <fullName>Exubrant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dissatisfied/Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dissatisfied/ EA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Full_Address__c</fullName>
        <description>This is the Full Address from the related Opp&apos;s Utility Account</description>
        <formula>PG_Product__r.Opportunity__r.Full_Address_from_UA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Full Address from the related Opp&apos;s Utility Account</inlineHelpText>
        <label>Full Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <description>NVM recording reference used by call player</description>
        <label>GUID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geopointe_Shape_Test__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Geopointe Shape Test</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>geopointe__Shape__c.geopointe__Usage_Type__c</field>
                <operation>equals</operation>
                <value>Shape Field</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>geopointe__Shape__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Had_a_Special_Role__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if the truck that was rolled was not normal.</inlineHelpText>
        <label>Had a Special Role</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>How_Was_Complaint_Resolved__c</fullName>
        <label>How Was Complaint Resolved</label>
        <picklist>
            <picklistValues>
                <fullName>Home Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Call</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>I_created_this_Case__c</fullName>
        <formula>CreatedById =  $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>I created this Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Case_Comment__c</fullName>
        <label>Initial Case Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Account_Past_Due__c</fullName>
        <formula>Account.Is_Account_Delinquent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Account Past Due</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_there_a_Net_Meter_Present__c</fullName>
        <label>Is there a Net Meter Present?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_Requires_2_Technicians__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check here if multiple techs are required to complete this job quickly and safely.</inlineHelpText>
        <label>Case Requires 2 Technicians</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LD_Lease_Days_Delinquent__c</fullName>
        <formula>Account.Days_Delinquent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LD Lease Days Delinquent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Case_Comment__c</fullName>
        <description>Last case comment is displayed</description>
        <label>Last Case Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Link_for_Partner_Users__c</fullName>
        <formula>HYPERLINK(&quot;https://pgpartners.force.com/subcontractors/&quot; &amp;  Id , &quot;Link for Partner Users&quot;)</formula>
        <label>Link for Partner Users</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__EmailSentTo__c</fullName>
        <label>EmailSentTo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMAccountOverride__c</fullName>
        <label>NVMAccountOverride</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMCaseOrigin__c</fullName>
        <description>The content of this field is presented on the contact pad when a case is assigned to an agent. For example: Email</description>
        <inlineHelpText>The content of this field is presented on the contact pad when a case is assigned to an agent. For example: Email</inlineHelpText>
        <label>NVM Case Origin</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMNodeOverride__c</fullName>
        <description>Used to override the NewVoiceMedia node a case routing request is sent to</description>
        <inlineHelpText>Used to override the NewVoiceMedia node a case routing request is sent to</inlineHelpText>
        <label>NVMNodeOverride</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMOverrideCaseOwnerTimeoutLoggedIn__c</fullName>
        <description>Override: how long to try to route replies to the case owner, when they are logged in</description>
        <inlineHelpText>Override: how long to try to route replies to the case owner, when they are logged in</inlineHelpText>
        <label>NVMOverrideCaseOwnerTimeoutLoggedIn</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMOverrideCaseOwnerTimeoutLoggedOut__c</fullName>
        <description>Override: how long to try to route replies to the case owner, when they are logged out</description>
        <inlineHelpText>Override: how long to try to route replies to the case owner, when they are logged out</inlineHelpText>
        <label>NVMOverrideCaseOwnerTimeoutLoggedOut</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMRoutable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to determine whether a case should be routed to an agent via NVM</description>
        <inlineHelpText>Used to determine whether a case should be routed to an agent via NVM</inlineHelpText>
        <label>NVMRoutable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__RoutePlanIdentifier__c</fullName>
        <label>RoutePlanIdentifier</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Skills__c</fullName>
        <label>Skills</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Num_of_Delinquent_Leases_on_this_Account__c</fullName>
        <formula>Account.Count_of_Delinquent_Leases__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Delinquent Leases on this Account</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Comments__c</fullName>
        <label>Number of Comments</label>
        <summaryForeignKey>Ops_Comment__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Opportunities_on_this_Account__c</fullName>
        <formula>Account.Number_of_Opportunities__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Opportunities on this Account</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ops_Verify__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ops Verify</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Comments__c</fullName>
        <inlineHelpText>Other comments from customer (recommendations on ways we can improve our service)</inlineHelpText>
        <label>Other Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PG_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PG Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Project__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>PV Install, EE Upgrade, SHW Install, PV Feasibility, EE Assessment, EE service call, EE QC</value>
            </filterItems>
            <filterItems>
                <field>Project__c.Opportunity__r.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PVI_Net_Meter_Verified_Date__c</fullName>
        <formula>PG_Product__r.PV_Net_Meter_Install_Verified_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PVI Net Meter Verified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PVI_Placed_In_Service_Date__c</fullName>
        <formula>PG_Product__r.PVI_Placed_In_Service_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date System is fully on service.</inlineHelpText>
        <label>PVI Placed In Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Powerdash_Internal__c</fullName>
        <formula>PG_Product__r.PowerDash_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Powerdash Link (Internal)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Method_of_Contact__c</fullName>
        <label>Preferred Method of Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Home Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Property_ID__c</fullName>
        <formula>PG_Product__r.Opportunity__r.Property__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Property ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Property__c</fullName>
        <formula>PG_Product__r.Opportunity__r.Property__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Property</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RMA Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_for_Contractor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Request to send to Contractor.</description>
        <inlineHelpText>This field triggers an email alert when given a value.</inlineHelpText>
        <label>Request for Contractor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resend_To_Contractor2__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Triggers another email notification to the Contractor</inlineHelpText>
        <label>Resend To Contractor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resend_to_Contractor__c</fullName>
        <inlineHelpText>This field triggers an email alert when given a value.</inlineHelpText>
        <label>Old_ToBeDeleted_Resend to Contractor</label>
        <picklist>
            <picklistValues>
                <fullName>Carimi Contractors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KDH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veteran Contractors</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SMS_opt_out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS opt out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Phone_Number__c</fullName>
        <label>Secondary Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Select_Service_Contractor__c</fullName>
        <label>Select Service Contractor</label>
        <picklist>
            <picklistValues>
                <fullName>Uptown Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KDH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veteran Contractors</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Send_Case_Notifications_To__c</fullName>
        <label>Send Case Notifications To</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Service_Area__c</fullName>
        <formula>TEXT(PG_Product__r.Opportunity__r.Property__r.Zip_for_Service_Areas__r.Service_Area__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Area</label>
        <type>Text</type>
    </fields>
</CustomObject>